--- a/data/rules.yml
+++ b/data/rules.yml
@@ -11,4 +11,7 @@ rules:
   - intent: bot_challenge
   - action: utter_iamabot
 
-
+- rule: respond to FAQs
+  steps:
+  - intent: faq
+  - action: utter_faq
