--- a/config.yml
+++ b/config.yml
@@ -27,6 +27,9 @@ pipeline:
   - name: FallbackClassifier
     threshold: 0.5
     ambiguity_threshold: 0.1
+  - name: ResponseSelector
+    epochs: 100
+    retrieval_intent: faq
 
 # Configuration for Rasa Core.
 # https://rasa.com/docs/rasa/core/policies/
@@ -43,3 +46,12 @@ policies:
 #     max_history: 5
 #     epochs: 100
 #     constrain_similarities: true
+  # - name: MemoizationPolicy
+  # - name: RulePolicy
+  # - name: UnexpecTEDIntentPolicy
+  #   max_history: 5
+  #   epochs: 100
+  # - name: TEDPolicy
+  #   max_history: 5
+  #   epochs: 100
+  #   constrain_similarities: true
