--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -155,3 +155,13 @@ nlu:
     - tell me what the check out time is
     - when is checkout?
     - when time is check-out?
+- intent: faq/ask_have_gym
+  examples: |
+    - is there a gym?
+    - do you have a gym?
+    - does the hotel have a gym?
+    - where is the gym in the hotel?
+    - where can i find the gym?
+    - tell me about the gym
+    - when is the gym open?
+    - what time is the gym open?
