--- a/domain.yml
+++ b/domain.yml
@@ -55,6 +55,14 @@ responses:
   - text: Check out is by 11 AM on your departure date. Our team is happy to store your luggage for you at the reception.
   utter_faq/ask_have_gym:
   - text: The gym can be found on the fifth floor. It is open to our guests 24 hours a day every day. Simply use your room key card to gain entry.
+  utter_faq/ask_have_restaurant:
+  - text: "The hotel has two restaurants:\n
+          1) Mezze is a Mediterranean restaurant. It can be found on the hotel's ground floor.
+          2) Rasa is an Indian restaurant. It can be found on the hotel's top floor."
+  utter_faq/ask_breakfast_info:
+  - text: "Breakfast is included with your room. It is served in Mezze, the ground floor restaurant.
+          From Mondays to Fridays, breakfast is served from 7:00 AM - 11:00 AM. On Saturdays and Sundays, it is
+          served from 8:00 AM - 12:00 PM"
 actions:
 - utter_anythingelse
 - utter_ask_room_number
