--- a/tests/test_stories.yml
+++ b/tests/test_stories.yml
@@ -1,80 +1,33 @@
-#### This file contains tests to evaluate that your bot behaves as expected.
-#### If you want to learn more, please see the docs: https://rasa.com/docs/rasa/testing-your-assistant
-
 stories:
-- story: happy path 1
+- story: users requests room clean asap
   steps:
   - user: |
-      hello there!
-    intent: greet
-  - action: utter_greet
+      I want my room cleaned
+    intent: request_clean_room
+  - action: utter_clean_room
   - user: |
-      amazing
-    intent: mood_great
-  - action: utter_happy
+      asap
+    intent: need_urgent
+  - action: utter_ask_room_number
+  - user: |
+      room [808]{"entity": "room_number"}
+    intent: inform_room_number
+  - action: utter_rightaway
 
-- story: happy path 2
-  steps:
-  - user: |
-      hello there!
-    intent: greet
-  - action: utter_greet
-  - user: |
-      amazing
-    intent: mood_great
-  - action: utter_happy
-  - user: |
-      bye-bye!
-    intent: goodbye
-  - action: utter_goodbye
-
-- story: sad path 1
+- story: user asks about breakfast
   steps:
   - user: |
       hello
     intent: greet
   - action: utter_greet
   - user: |
-      not good
-    intent: mood_unhappy
-  - action: utter_cheer_up
-  - action: utter_did_that_help
+      is breakfast included
+    intent: faq/ask_breakfast_info
+  - action: utter_faq/ask_breakfast_info
   - user: |
-      yes
-    intent: affirm
-  - action: utter_happy
-
-- story: sad path 2
-  steps:
-  - user: |
-      hello
-    intent: greet
-  - action: utter_greet
-  - user: |
-      not good
-    intent: mood_unhappy
-  - action: utter_cheer_up
-  - action: utter_did_that_help
-  - user: |
-      not really
-    intent: deny
-  - action: utter_goodbye
-
-- story: sad path 3
-  steps:
-  - user: |
-      hi
-    intent: greet
-  - action: utter_greet
-  - user: |
-      very terrible
-    intent: mood_unhappy
-  - action: utter_cheer_up
-  - action: utter_did_that_help
-  - user: |
-      no
-    intent: deny
-  - action: utter_goodbye
+      cool, thanks
+    intent: thank
+  - action: utter_noproblem
 
 - story: say goodbye
   steps:
