--- a/domain.yml
+++ b/domain.yml
@@ -3,19 +3,18 @@ session_config:
   session_expiration_time: 60
   carry_over_slots_to_new_session: true
 intents:
+- faq:
+    is_retrieval_intent: true
+- thank
+- greet
 - request_clean_room
 - need_urgent
 - schedule_time
 - inform_room_number
-- greet
-- faq:
-    is_retrieval_intent: true
-- thank
 - goodbye
 - affirm
 - deny
 - bot_challenge
-
 entities:
 - room_number
 slots:
@@ -56,13 +55,12 @@ responses:
   utter_faq/ask_have_gym:
   - text: The gym can be found on the fifth floor. It is open to our guests 24 hours a day every day. Simply use your room key card to gain entry.
   utter_faq/ask_have_restaurant:
-  - text: "The hotel has two restaurants:\n
-          1) Mezze is a Mediterranean restaurant. It can be found on the hotel's ground floor.
-          2) Rasa is an Indian restaurant. It can be found on the hotel's top floor."
+  - text: |
+      The hotel has two restaurants:
+       1) Mezze is a Mediterranean restaurant. It can be found on the hotel's ground floor. 
+       2) Rasa is an Indian restaurant. It can be found on the hotel's top floor.
   utter_faq/ask_breakfast_info:
-  - text: "Breakfast is included with your room. It is served in Mezze, the ground floor restaurant.
-          From Mondays to Fridays, breakfast is served from 7:00 AM - 11:00 AM. On Saturdays and Sundays, it is
-          served from 8:00 AM - 12:00 PM"
+  - text: Breakfast is included with your room. It is served in Mezze, the ground floor restaurant. From Mondays to Fridays, breakfast is served from 7:00 AM - 11:00 AM. On Saturdays and Sundays, it is served from 8:00 AM - 12:00 PM
 actions:
 - utter_anythingelse
 - utter_ask_room_number
