--- a/domain.yml
+++ b/domain.yml
@@ -66,6 +66,8 @@ responses:
   - text: Can I have your room number please?
   utter_ask_items_requested:
   - text: What would you like to be brought to your room?
+  utter_items_requested:
+  - text: To confirm, you wanted {items_requested} brought to your room. Is that correct?
   utter_faq/ask_check_in_time:
   - text: Check in starts at 3 PM. Please contact the reception to request an early check-in.
   utter_faq/ask_check_out_time:
@@ -98,22 +100,9 @@ responses:
   utter_notpossible:
   - text: Unfortunately, we are unable accomodate your request. Sorry.
 actions:
-- utter_anythingelse
-- utter_ask_room_number
-- utter_clean_room
-- utter_default
-- utter_faq
-- utter_goodbye
-- utter_greet
-- utter_heretohelp
-- utter_noproblem
-- utter_letmecheck
-- utter_rightaway
-- utter_schedule_time
-- utter_late_checkout
-- utter_possible
-- utter_notpossible
+- validate_item_request_form
 forms:
+# todo: simplify by making a form for all requests? add custom action
   item_request_form:
     required_slots:
       - room_number
