--- a/data/rules.yml
+++ b/data/rules.yml
@@ -16,6 +16,11 @@ rules:
   - intent: faq
   - action: utter_faq
 
+- rule: answer out of scope
+  steps:
+  - intent: out_of_scope
+  - action: utter_out_of_scope
+
 - rule: activate item request form
   steps:
   - intent: request_item
