--- a/data/rules.yml
+++ b/data/rules.yml
@@ -37,3 +37,9 @@ rules:
     - requested_slot: null
   - action: utter_submit
   - action: utter_items_requested
+
+- rule: two stage fallback
+  steps:
+  - intent: nlu_fallback
+  - action: action_two_stage_fallback
+  - active_loop: action_two_stage_fallback
