--- a/domain.yml
+++ b/domain.yml
@@ -99,6 +99,14 @@ responses:
   - text: Yep, we can do that for you.
   utter_notpossible:
   - text: Unfortunately, we are unable accomodate your request. Sorry.
+  utter_ask_rephrase:
+  - text: I'm sorry, I didn't quite understand that. Can you please rephrase the question?
+  utter_default:
+  - text: I'm sorry, I can't help you. I will pass you to a human that can.
+  utter_out_of_scope/room_service:
+  - text: I understand you want room service but I do not have that skill yet. I will transfer you to a human to help you with that.
+  utter_out_of_scope/other:
+  - text: Sorry, I do not know how to handle that request yet. Type "help" to see what I can do.
 actions:
 - validate_item_request_form
 forms:
