--- a/config.yml
+++ b/config.yml
@@ -1,8 +1,15 @@
+# The config recipe.
+# https://rasa.com/docs/rasa/model-configuration/
 recipe: default.v1
 
+# Configuration for Rasa NLU.
+# https://rasa.com/docs/rasa/nlu/components/
 language: en
 
 pipeline:
+# No configuration for the NLU pipeline was provided. The following default pipeline was used to train your model.
+# If you'd like to customize it, uncomment and adjust the pipeline.
+# See https://rasa.com/docs/rasa/tuning-your-model for more information.
   - name: WhitespaceTokenizer
   - name: RegexFeaturizer
   - name: LexicalSyntacticFeaturizer
@@ -14,24 +21,37 @@ pipeline:
   - name: DIETClassifier
     epochs: 100
     constrain_similarities: true
+  - name: ResponseSelector
+    epochs: 100
+    constrain_similarities: true
   - name: FallbackClassifier
     threshold: 0.5
     ambiguity_threshold: 0.1
   - name: ResponseSelector
+    epochs: 100
     retrieval_intent: faq
-    epochs: 100
-  - name: ResponseSelector
-    retrieval_intent: out_of_scope
-    epochs: 100
 
+# Configuration for Rasa Core.
+# https://rasa.com/docs/rasa/core/policies/
 policies:
-  - name: RulePolicy
-  - name: AugmentedMemoizationPolicy
-    max_history: 6
-  - name: UnexpecTEDIntentPolicy
-    max_history: 5
-    epochs: 100
-  - name: TEDPolicy
-    max_history: 5
-    epochs: 100
-    constrain_similarities: true
+# # No configuration for policies was provided. The following default policies were used to train your model.
+# # If you'd like to customize them, uncomment and adjust the policies.
+# # See https://rasa.com/docs/rasa/policies for more information.
+#   - name: MemoizationPolicy
+#   - name: RulePolicy
+#   - name: UnexpecTEDIntentPolicy
+#     max_history: 5
+#     epochs: 100
+#   - name: TEDPolicy
+#     max_history: 5
+#     epochs: 100
+#     constrain_similarities: true
+  # - name: MemoizationPolicy
+  # - name: RulePolicy
+  # - name: UnexpecTEDIntentPolicy
+  #   max_history: 5
+  #   epochs: 100
+  # - name: TEDPolicy
+  #   max_history: 5
+  #   epochs: 100
+  #   constrain_similarities: true
