Added validation for items requested

--- a/data/rules.yml
+++ b/data/rules.yml
@@ -30,5 +30,4 @@ rules:
   - active_loop: null
   - slot_was_set:
     - requested_slot: null
-  - action: utter_submit
-  - action: utter_items_requested
+  - action: utter_rightaway
