--- a/data/rules.yml
+++ b/data/rules.yml
@@ -31,3 +31,9 @@ rules:
   - slot_was_set:
     - requested_slot: null
   - action: utter_rightaway
+
+- rule: Implementation of the Two-Stage-Fallback
+  steps:
+  - intent: nlu_fallback
+  - action: action_two_stage_fallback
+  - active_loop: action_two_stage_fallback
